Lower Java target to 11 for Solr 9 compatibility
Solr 9 requires Java 11+; the previous target of 21 would prevent the
JAR from loading on any JVM below 21.  Changed maven.compiler.source/target
from 21 to 11 and replaced Java 16+ record types (StatePos,
TokenData) and Java 15+ String.formatted() calls with Java 11-compatible
equivalents.